<resources>
    <string name="app_name">Test Monoyer</string>

    <string name="main_activity_description">Evaluez votre vision depuis chez vous</string>

    <string name="login">Connexion</string>
    <string name="start_test">Commence le test de vision</string>
    <string name="parameter">Paramètres</string>

    <!-- NOTIFICATION SERVICE -->
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="notification_title">"Vous avez reçu une notification"</string>

    <!-- MAIN ACTIVITY -->
    <string name="error_not_connected">Vous devez vous connecter !</string>
    <string name="error_authentication_canceled">Authentification annulée&#8230;</string>
    <string name="error_no_internet">Aucune connexion internet !</string>
    <string name="error_unknown_error">Une erreur inconnue s\'est produite&#8230;</string>
    <string name="connection_succeed">Authentification réussie !</string>
    <string name="button_login_text_logged">Afficher le profil</string>
    <string name="button_login_text_not_logged">Connexion</string>

    <!-- LOGIN ACTIVITY -->
    <string name="toolbar_title_login_activity">Votre Profil</string>
    <string name="text_input_username">Nom d\'utilisateur</string>
    <string name="text_view_email">Adresse email :</string>
    <string name="button_update_account">Mettre à jour le nom d\'utilisateur</string>
    <string name="button_delete_account">Supprimer mon compte</string>
    <string name="button_sign_out_account">Déconnexion</string>
    <string name="info_no_email_found">Auncune adresse email</string>
    <string name="info_no_username_found">Aucun nom d\'utilisateur</string>
    <string name="popup_message_confirmation_delete_account">Es-tu sûr(e) de vouloir supprimer ton compte ?</string>
    <string name="popup_message_choice_yes">Oui !</string>
    <string name="popup_message_choice_no">Non</string>

    <!-- PARAMETERS ACTIVITY -->
    <string name="toolbar_title_parameters_activity">Vos paramètres</string>
    <string name="text_view_title_parameters">Bienvenue dans les paramètres de l\'application</string>
    <string name="text_view_dpi">entrez le nombre de dpi que vous voulez :</string>
    <string name="text_view_dpi_expli">plus vous choisissez de grand dpi plus la sensibilité augmentera</string>
    <string name="validation">Je valide</string>
    <string name="NoControler">Pas de controlleur détécté</string>

    <!-- START TEST ACTIVITY -->
    <string name="toolbar_title_test_activity">Le Test de vision</string>
    <string name="explications">Bienvenue dans le test ! Afinde tester votre vision vous devrez cliquer sur la lettre dans la ligne avec plusieures lettres corespondant a la lettre en vert en bas de l\'écran.</string>
    <string name="button_start_test">Je commence le test</string>

    <!-- FIN TEST ACTIVITY -->
    <string name="toolbar_title_début_fin_activity">Test Monoyer</string>
    <string name="Score">Votre test score au test de vision est de : %1$d diziemes</string>
    <string name="button_end_test">Je reviens au menu</string>
</resources>