<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="117dp"
            android:layout_height="179dp"
            android:layout_margin="@dimen/default_large_margin"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:text="@string/app_name"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:text="@string/main_activity_description" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/default_large_margin"
            android:gravity="bottom"
            android:orientation="vertical">

            <!-- BUTTON LOGIN -->

            <!-- BUTTON CHAT -->

            <Button
                android:id="@+id/loginButton"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_large_margin"
                android:background="@drawable/button_radius_primary_color"
                android:padding="@dimen/default_large_margin"
                android:text="@string/login"
                android:textColor="#fff"
                android:textSize="@dimen/default_text_size" />

            <Button
                android:id="@+id/testButton"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_large_margin"
                android:background="@drawable/button_radius_accent_color"
                android:padding="@dimen/default_large_margin"
                android:text="@string/start_test"
                android:textColor="#fff"
                android:textSize="@dimen/default_text_size" />

            <Button
                android:id="@+id/parametreButton"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_large_margin"
                android:background="@drawable/button_radius_primary_color"
                android:padding="@dimen/default_large_margin"
                android:text="@string/parameter"
                android:textColor="#fff"
                android:textSize="@dimen/default_text_size" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>