<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/profil_LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_large_margin"
                android:gravity="end"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/profileImageView"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    tools:srcCompat="@tools:sample/avatars" />
            </LinearLayout>

            <EditText
                android:id="@+id/usernameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:text="@string/text_input_username"
                android:textSize="@dimen/default_text_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_view_email"
                    android:textSize="@dimen/default_text_size"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/emailTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="@dimen/default_margin"
                    android:textSize="@dimen/default_text_size" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="400dp">

        <Button
            android:id="@+id/updateButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:backgroundTint="#2196F3"
            android:padding="@dimen/default_margin"
            android:text="@string/button_update_account"
            android:textSize="@dimen/default_text_size" />

        <Button
            android:id="@+id/signOutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:backgroundTint="#FF9800"
            android:padding="@dimen/default_margin"
            android:text="@string/button_sign_out_account"
            android:textSize="@dimen/default_text_size" />

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:backgroundTint="#F44336"
            android:padding="@dimen/default_margin"
            android:text="@string/button_delete_account"
            android:textSize="@dimen/default_text_size" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>